Robin Hood on Sandy arrows no longer overlap on Mobile

--- a/theme/style.css
+++ b/theme/style.css
@@ -1231,12 +1231,12 @@
   }
 
   .robin-hood-stories .flex-prev {
-    left: 160px;
+    left: 36%;
     top:85px;
   }
 
 .robin-hood-stories .flex-next {
-    right: 160px;
+    right: 36%;
     top:85px;
   }
 
